# teleop_xr

./: .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  404.html  AGENTS.md  LICENSE  README.md  README.old.md  codecov.yml  hatch_build.py  index.html  mkdocs.yml  objects.inv  package-lock.json  package.json  pyproject.toml  root  v10.urdf
.github/: copilot-instructions.md
.github/workflows/: ci.yml  deploy_docs.yml  python-publish.yml  typescript-ci.yml
.sisyphus/: boulder.json  debug-webgl-findings.md
.sisyphus/drafts/: fix-spatial-glass.md  spatial-ui-cleanup.md
.sisyphus/notepads/: refactor_camera_config.md
.sisyphus/notepads/collision-ignore-adjacents/: learnings.md
.sisyphus/notepads/custom-robot-loader/: decisions.md  learnings.md
.sisyphus/notepads/event-system/: decisions.md
.sisyphus/notepads/feat-windows-path/: decisions.md  issues.md  learnings.md
.sisyphus/notepads/fix-abstract-instantiation/: decisions.md  learnings.md
.sisyphus/notepads/fix-collision-ignore-logic/: learnings.md
.sisyphus/notepads/fix-collision-ignore-logic-v2/: learnings.md
.sisyphus/notepads/ik-api-modularization/: learnings.md
.sisyphus/notepads/interactive-sphere-generation/: decisions.md  learnings.md
.sisyphus/notepads/migration-aframe/: decisions.md  issues.md  learnings.md  status.md
.sisyphus/notepads/migration-plan/: decisions.md  issues.md  (+2 more)
.sisyphus/plans/: cleanup_and_finalize.md  collision-ignore-adjacents.md  collision-ignore-generation.md  custom-robot-loader.md  debug-visibility.md  debug_headless_rendering.md  debug_spatial_ui.md  debug_webxr_screenshot.md  ee-absolute-mode.md  enable-ar-passthrough.md  fix-collision-ignore-logic-v2.md  fix-collision-ignore-logic.md  fix-spatial-glass.md  fix-spatial-ui.md  generic-description-override.md  ik-api-modularization.md  interactive-sphere-generation.md  migration-aframe.md  migration-plan.md  multi-sphere-collision.md  nextjs-config-panel.md  optimization-ik-module.md  passthrough-switch.md  ram-module.md  replace-h1-2-model.md  robot_orientation.md  robot_orientation_control_fix.md  robot_orientation_fix.md  robot_orientation_fix_2.md  robot_vis_axis.md  ros2-param-urdf-refactor.md  ros2-viz-update.md  spatial-ui-final.md  sphere-collision-ballpark.md  static-sphere-collision.md  teaarm_integration.md  teleop_transform_fix.md  ui-migration.md  unitree-ik-improvement.md  urdf-vis-port.md  (+1 more)
api/: index.html
custom_robots/: index.html
docs/: SPATIAL_UI_NOTES.md  api.md  custom_robots.md  dora.md  generic.md  ik.md  index.md  ros2.md  sphere_collision.md
docs/plans/: 2026-01-27-quest3-xrstate.md  2026-01-27-teleop-fix.md  2026-01-28-camera-streaming-refactor.md  2026-01-28-camera-view-config.md  2026-01-28-teleop-config-improvements.md  2026-01-29-ci-cd-setup.md  2026-01-29-cli-config-refactor.md
dora/: index.html
examples/: event_demo.py
generic/: index.html
plans/2026-01-27-quest3-xrstate/: index.html
plans/2026-01-27-teleop-fix/: index.html
plans/2026-01-28-camera-streaming-refactor/: index.html
plans/2026-01-28-camera-view-config-design/: index.html
plans/2026-01-28-teleop-config-improvements/: index.html
plans/2026-01-29-ci-cd-setup/: index.html
plans/2026-01-29-cli-config-refactor/: index.html
ros2/: index.html
scripts/: configure_sphere_collision.py  generate_spheres.py  test_sphere_occupancy.py
search/: search_index.json
sphere_collision/: index.html
teleop/: __init__.py  camera_views.py  index.html  test-teleop-ui.html  video_stream.py
teleop/assets/: teleop-ui.js
teleop/basic/: __main__.py
teleop/ros2/: __main__.py
teleop/ros2_ik/: __main__.py
teleop/xarm/: __main__.py
teleop_xr/: AGENTS.md  __init__.py  camera_views.py  common_cli.py  config.py  demo_ik.py  demo_robot.py  events.py  ik_utils.py  messages.py  ram.py  robot_vis.py  video_stream.py
teleop_xr/demo/: __main__.py
teleop_xr/ik/: AGENTS.md  __init__.py  collision.py  collision_sphere_cache.py  commands.py  control_mode.py  controller.py  loader.py  mink_solver.py  model_loader.py  robot.py  solver.py
teleop_xr/ik_sim/: __main__.py
teleop_xr/ros2/: __main__.py  cli.py
teleop_xr/ros2_ik/: __main__.py
teleop_xr/utils/: filter.py  jacobi_robot.py  jacobi_robot_ros.py  ros_numpy_tf.py  transform_limiter.py
tests/: AGENTS.md  conftest.py  debug-render.spec.ts  final_ui_complete_verification.spec.ts  final_verification.spec.ts  quest-screenshot.spec.ts  test_base_robot_urdf.py  test_camera_views.py  test_ci_workflow.py  test_collision_generation_script.py  test_collision_gui_logic.py  test_collision_ignore_logic.py  test_collision_ignore_order.py  test_collision_main_logic.py  test_collision_sphere_cache.py  test_collision_sphere_contract.py  test_collision_sphere_generation.py  test_common_cli.py  test_controller_frames.py  test_coverage_boost.py  test_demo_ee_delta.py  test_events.py  test_franka_coverage_final.py  test_franka_robot.py  test_frontend_paths.py  test_ik_api.py  test_ik_controller.py  test_ik_solver.py  test_ik_utils.py  test_integration_custom_robot.py  test_loader.py  test_messages.py  test_model_loader.py  test_multi_sphere_collision.py  test_openarm_robot.py  test_pose_compounding.py  test_pyroki_solver.py  test_ram.py  test_ram_coverage.py  test_ram_from_string.py  (+27 more)
tests/fixtures/: demo_openarm.urdf  minimal_robot.urdf  v10_full.urdf
webxr/: .gitignore  README.md  index.html  next.config.mjs  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
webxr/scripts/: optimize-assets.mjs
webxr/src/: aframe-types.d.ts  camera_config.ts  camera_settings_system.ts  camera_views.ts  client_id.ts  console_stream.ts  controller_camera_system.ts  general_config.ts  general_settings_system.ts  global_refs.ts  index.ts  panel.ts  panels.ts  robot_config.ts  robot_settings_system.ts  robot_system.ts  teleop_system.ts  track_routing.ts  video.ts
webxr/ui/: camera.uikitml  camera_settings.uikitml  general_settings.json  general_settings.uikitml  robot_settings.json  robot_settings.uikitml  teleop.json  teleop.uikitml  welcome.uikitml
(+91 files in other folders)
