[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["teleop_xr"]
artifacts = ["teleop_xr/cert.pem", "teleop_xr/key.pem"]

[tool.hatch.version]
source = "vcs"

[tool.uv.sources]
pyroki = { git = "https://github.com/chungmin99/pyroki.git" }
ballpark = { git = "https://github.com/chungmin99/ballpark.git" }

[tool.hatch.build.hooks.vcs]
version-file = "teleop_xr/_version.py"

[tool.hatch.build.targets.sdist]
exclude = [
  "webxr/node_modules",
  "webxr/out",
  "webxr/.vite",
]

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[project]
name = "teleop_xr"
dynamic = ["version"]
requires-python = ">=3.10"
description = "Turns your phone into a robot arm teleoperation device by leveraging the WebXR API"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
authors = [{ name = "Qrafty AI", email = "contact@qrafty-ai.com" }]
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "numpy",
  "transforms3d",
  "pytest",
  "requests",
  "websocket-client",
  "aiortc",
  "opencv-python",
  "av",
  "rich>=13.0.0",
  "tyro>=0.8.0",
  "pydantic>=2.0.0",
  "loguru>=0.7.3",
]

[project.urls]
Documentation = "https://github.com/qrafty-ai/teleop_xr"
Source = "https://github.com/qrafty-ai/teleop_xr"
Tracker = "https://github.com/qrafty-ai/teleop_xr/issues"

[project.optional-dependencies]
cuda = [
  "jax[cuda12]>=0.6.2",
]
ik = [
  "ballpark",
  "pyroki",
  "spatialmath-python>=1.1.15",
  "gitpython>=3.1.46",
  "xacro>=2.1.1",
  "filelock>=3.20.3",
  "viser>=1.0.21",
]

[project.entry-points."teleop_xr.robots"]
h1 = "teleop_xr.ik.robots.h1_2:UnitreeH1Robot"
franka = "teleop_xr.ik.robots.franka:FrankaRobot"
teaarm = "teleop_xr.ik.robots.teaarm:TeaArmRobot"

[dependency-groups]
dev = [
  "pre-commit",
  "mkdocs-material",
  "mkdocstrings[python]",
  "pytest-cov>=6.0.0",
  "pin",
]

[tool.pytest.ini_options]
addopts = "--cov=teleop_xr --cov-report=xml --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
source = ["teleop_xr", "scripts"]
omit = ["teleop_xr/_version.py"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
]
